# llm-selector

./: README.md
libs/: build.sh  bump-version.sh
libs/llm-selector/: .env.example  BEHAVIOR_COMPARISON.md  README.md  WORKFLOW_DIAGRAMS.md  example.py  manual_verification.py  pyproject.toml
libs/llm-selector/docs/: README.md
libs/llm-selector/src/llm_selector/: __init__.py  config.py  memory_store.py  models.py  selector.py
libs/llm-selector/tests/: __init__.py  test_integration.py  test_memory_store.py  test_selector.py
sample-client/: .env.example  .gitignore  README.md  client.py  pyproject.toml
