[project]
name = "llm-selector"
version = "0.1.2"
description = "Intelligently route LLM requests across multiple providers with automatic retry logic and cooldown tracking"
readme = "README.md"
authors = [
    { name = "dlyd-gin", email = "criers-ending6v@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0"
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
